--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,5 +7,6 @@ UseBB 0.1.1 Changelog
 - Fixed buggy guests count on index.php.
 - Fixed bug causes admins not seeing hidden e-mail addresses.
 - Fixed broken ICQ status icon when no ICQ number is given.
+- Fixed bug with wrong dataype of auth in usebb_forums.
 - Added CVS Header keywords to php files.
 - Cosmetic changes with spaces that should be tabs in php files.
