--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 0.2 Changelog
 ------------------------------
 
 - Fixed random key generator with seed for mt_rand on PHP < 4.2.0.
+- Added more detailed location info for some pages.
 - Password edit form now requests current password.
 - Replaced smaller version of the license with the official one.
 
