--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,8 +4,9 @@ UseBB 0.2 Changelog
 ------------------------------
 
 - Fixed random key generator with seed for mt_rand on PHP < 4.2.0.
-- Added more detailed location info for some pages.
-- Password edit form now requests current password.
+- Functions moved to new functions class.
+- Added more detailed location info for use in detailed online list.
+- Many panel pages now give a confirmation message.
 - Replaced smaller version of the license with the official one.
 
 UseBB 0.1.1 Changelog
