Config array replaced by new function in functions class.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 0.2 Changelog
 
 - Fixed random key generator with seed for mt_rand on PHP < 4.2.0.
 - Functions moved to new functions class.
+- Config array replaced by new function in functions class.
 - Added more detailed location info for use in detailed online list.
 - Many panel pages now give a confirmation message.
 - Replaced smaller version of the license with the official one.
