Removed annoying 100% width of textarea's in CSS.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ UseBB 0.2 Changelog
 - Added more detailed location info for use in detailed online list.
 - Many panel pages now give a confirmation message.
 - Better viewing of debug information and SQL errors.
+- Many small template updates.
 - Replaced smaller version of the license with the official one.
 
 UseBB 0.1.1 Changelog
