Changed project web site URL to http://www.usebb.net.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Please see http://usebb.sourceforge.net/about/team.php
+Please see http://www.usebb.net/about/team.php
 for a list of people involved in UseBB's development.
