--- a/INSTALL
+++ b/INSTALL
@@ -4,7 +4,7 @@ UseBB Development Version Installation
 Until UseBB is in a stable state, this guide will remain very simple.
 
 Before installing UseBB, make sure your host accords to the minimal system requirements.
-Please see http://usebb.sourceforge.net/features/#backend_requirements
+Please see http://www.usebb.net/features/#backend_requirements
 
 1. Execute the SQL file on your database. Currently, UseBB needs 12 tables.
 2. Adjust the rows in usebb_config to your preferences. YOU MUST DO THIS FOR CORRECT HANDLING!
@@ -13,4 +13,4 @@ Please see http://usebb.sourceforge.net/features/#backend_requirements
 5. Register a first user. It will automatically be an admin (however this makes almost any difference for the moment).
 6. Test UseBB.
 
-http://usebb.sourceforge.net/
+http://www.usebb.net/
