Fixed quick reply, now only visible when the user is actually allowed to reply.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,11 @@
 $Header$
 
+UseBB 0.3 Changelog
+------------------------------
+
+- Fixed bug with MySQL 3.x that gave error on forum view.
+- Fixed quick reply, now only visible when the user is actually allowed to reply.
+
 UseBB 0.2 Changelog
 ------------------------------
 
