--- a/Changelog.txt
+++ b/Changelog.txt
@@ -10,6 +10,7 @@ UseBB 0.3 Changelog
 	powerful and better output compression method.
 - Better and safer BBCode parser, new [mailto] tag and URL's don't need to have [url]
 	tags anymore to be parsed.
+- Member's avatar is now checked if it's actually an image.
 
 UseBB 0.2 Changelog
 ------------------------------
