--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ UseBB 0.3 Changelog
 - Fixed bug 934807: Latest reply in topic list doesn't update.
 - Fixed bug 934456: Latest post doesn't update when moving.
 - Fixed bug 935564: Notice: Array to string conversion in common.php (PHP < 4.3.0).
+- Fixed htmlentities() problem in user signatures.
 - Optimalizations in template.php, debug also works without </body> tag and more 
 	powerful and better output compression method.
 - Better and safer BBCode parser, new [mailto] tag and URL's don't need to have [url]
