--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,7 +15,7 @@ UseBB 0.3 Changelog
 	powerful and better output compression method.
 - Better and safer BBCode parser, new [mailto] tag and URL's don't need to have [url]
 	tags anymore to be parsed.
-- Member's avatar is now checked if it's actually an image.
+- Member's avatar is now checked if it's actually an image (+ revised once).
 - Changes to CSS template: label{cursor:pointer;}.
 - Return to topic after posting can now be turned of for posting new topics too.
 - Valid URL checking for profile's website field.
