--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ UseBB 0.3 Changelog
 - Fixed bug 935564: Notice: Array to string conversion in common.php (PHP < 4.3.0).
 - Fixed bug 935924: Session ID's are passed twice on some PHP config (+ revised once).
 - Fixed htmlentities() problem in user signatures.
+- Fixed $errors array that wasn't being initialized in various files.
 - Optimalizations in template.php, debug also works without </body> tag and more 
 	powerful and better output compression method.
 - Better and safer BBCode parser, new [mailto] tag and URL's don't need to have [url]
