--- a/Changelog.txt
+++ b/Changelog.txt
@@ -30,6 +30,9 @@ UseBB 0.3 Changelog
 - Multiple levels of output compression: none, compress whitespace, gzip and gzip +
 	compress whitespace.
 - PHP's session handler now uses the cookie configuration options.
+- Terms of Use added.
+- Automatic return to previous page when terms of use has not been accepted.
+- Small fix with quotes for page title when replying to topics.
 
 UseBB 0.2 Changelog
 ------------------------------
