--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 A short and temporary installation manual can be found in INSTALL.
+An upgrade manual can be found in UPGRADE.
 
 See the documentation repository for manuals about installing or
 upgrading UseBB: http://sourceforge.net/docman/index.php?group_id=93103.
