Fixed bug 990425: Debug messages are passed to CSS as well.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 $Header$
 
+UseBB 0.3 Changelog
+------------------------------
+
+- Fixed bug 990425: Debug messages are passed to CSS as well.
+
 UseBB 0.2.3 Changelog
 ------------------------------
 
