--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ UseBB 0.3 Changelog
 
 - Fixed bug 990425: Debug messages are passed to CSS as well.
 - Fixed bug 990463: Location HTTP Header should only take absolute URLs.
+- Added feature 973978: Show server load.
 
 UseBB 0.2.3 Changelog
 ------------------------------
