--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 0.3 Changelog
 - Fixed bug 990463: Location HTTP Header should only take absolute URLs.
 - Added feature 973978: Show server load.
 - Added feature 978099: Strip off long topic names in topic list.
+- Added feature that saves the guest's username in the session.
 
 UseBB 0.2.3 Changelog
 ------------------------------
