--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,8 @@ UseBB 0.3 Changelog
 - Added feature 973978: Show server load.
 - Added feature 978099: Strip off long topic names in topic list.
 - Added feature that saves the guest's username in the session.
+- Avatars now have an empty alternate text - looks better in Mozilla when image is
+	unavailable.
 
 UseBB 0.2.3 Changelog
 ------------------------------
