--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 0.3 Changelog
 - Fixed bug 990425: Debug messages are passed to CSS as well.
 - Fixed bug 990463: Location HTTP Header should only take absolute URLs.
 - Added feature 973978: Show server load.
+- Fixed server load to work on some systems.
 - Added feature 978099: Strip off long topic names in topic list.
 - Added feature that saves the guest's username in the session.
 - Avatars now have an empty alternate text - looks better in Mozilla when image is
