--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,7 +13,8 @@ UseBB 0.3 Changelog
 - Added feature that saves the guest's username in the session.
 - Avatars now have an empty alternate text - looks better in Mozilla when image is
 	unavailable.
-- Some adjustments to several templates.
+- Some adjustments and upgrades to several templates.
+- Removed non-standard opacity attributes for small buttons at the page bottom.
 
 UseBB 0.2.3 Changelog
 ------------------------------
