--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ UseBB 0.3 Changelog
 - Fixed bug 990463: Location HTTP Header should only take absolute URLs.
 - Fixed bug 997622: Source code compression strips newlines out of textareas.
 - Fixed bug 1035507: ob_gzhandler + URL-Rewriter error.
+- Fixed bug 1037973: No error on invalid website URL (profile).
 - Fixed server load to work on some systems.
 - Fixed Undefined index: NoSuchUser on send new password page.
 - Fixed a security exploit.
