--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ UseBB 0.3 Changelog
 - Fixed server load to work on some systems.
 - Fixed Undefined index: NoSuchUser on send new password page.
 - Fixed a security exploit.
+- Removed all strtolower() occasions - improves translation possibilities.
 - Server load in template parser moved to function class.
 - Forum stats box moved to function class.
 - Avatars now have an empty alternate text - looks better in Mozilla when image is
