Added 'Open external links in new windows' feature.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,7 @@ UseBB 0.3 Changelog
 - Added feature 978099: Strip off long topic names in topic list.
 - Added feature that saves the guest's username in the session.
 - Added terms of use text in translations.
+- Added 'Open external links in new windows' feature.
 - Fixed bug 990425: Debug messages are passed to CSS as well.
 - Fixed bug 990463: Location HTTP Header should only take absolute URLs.
 - Fixed bug 997622: Source code compression strips newlines out of textareas.
