--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 0.3 Changelog
 - Added feature 973978: Show server load.
 - Added feature 973980: BBCode: quote, code, size, Google.
 - Added feature 978099: Strip off long topic names in topic list.
+- Added feature 1055684: Hide avatars/signatures setting.
 - Added feature that saves the guest's username in the session.
 - Added terms of use text in translations.
 - Added 'Open external links in new windows' feature.
