--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ UseBB 0.3 Changelog
 - Added feature that saves the guest's username in the session.
 - Added terms of use text in translations.
 - Added 'Open external links in new windows' feature.
+- Added paging for topiclists and topics.
 - Fixed bug 954411: BBcode parser doesn't work with nestings.
 - Fixed bug 990425: Debug messages are passed to CSS as well.
 - Fixed bug 990463: Location HTTP Header should only take absolute URLs.
