--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ UseBB 0.3 Changelog
 - Added terms of use text in translations.
 - Added 'Open external links in new windows' feature.
 - Added paging for topiclists and topics.
+- Added preview feature for posting new topics and replies.
 - Fixed bug 954411: BBcode parser doesn't work with nestings.
 - Fixed bug 990425: Debug messages are passed to CSS as well.
 - Fixed bug 990463: Location HTTP Header should only take absolute URLs.
