Added active topics page.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ UseBB 0.3 Changelog
 - Added delete post feature.
 - Added edit information viewing in topics.
 - Added FAQ page.
+- Added active topics page.
 - Added MySQL 4.1 (mysqli) enhanced support.
 - Added viewing IP addresses in topics when being admin.
 - Fixed bug 990425: Debug messages are passed to CSS as well.
