--- a/INSTALL
+++ b/INSTALL
@@ -4,12 +4,18 @@ UseBB Development Version Installation
 Until UseBB is in a stable state, this guide will remain very simple.
 
 Before installing UseBB, make sure your host accords to the minimal system requirements.
-Please see http://www.usebb.net/features/#backend_requirements
+* Minimal: HTTP-server supporting PHP, PHP 4.1.0, MySQL 3.23
+* Recommended: GNU/Linux, most recent versions of Apache, PHP and MySQL
+
+You might want to use install.php to quickly set up your board. Otherwise, you can
+follow these directions:
 
 1. Execute usebb.sql on your database. Currently, UseBB needs 9 tables.
 3. Edit config.php to your preferences.
 4. Upload all the files to your host.
-5. Register a first user. It will automatically be an admin.
-6. Test UseBB.
+5. Delete install.php and upgrade-*.php for security reasons.
+6. Register a first user. It will automatically be an administrator.
+7. Test UseBB.
 
-http://www.usebb.net/
+Note: to further set up your forum, see:
+http://www.usebb.net/docs/index.php/Administration_without_ACP
