--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 A short and temporary installation manual can be found in INSTALL.
 An upgrade manual can be found in UPGRADE.
 
-See the documentation repository for manuals about installing or
-upgrading UseBB: http://sourceforge.net/docman/index.php?group_id=93103.
+See the documentation repository for further manuals:
+http://www.usebb.net/docs/index.php/Main_Page.
