--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ UseBB 0.3.1 Changelog
 ------------------------------
 
 - Fixed bug that kicks you back to install/upgrade after logging in.
+- Fixed bug that didn't update the statistics well while installing.
 
 UseBB 0.3 Changelog
 ------------------------------
