--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 0.3.1 Changelog
 - Fixed bug that kicks you back to install/upgrade after logging in.
 - Fixed bug that didn't update the statistics well while installing.
 - Added translations in Dutch and German.
+- Added hack to fallback on English (useful for outdated translations).
 - Fallback on default language and template set when not available.
 - Applied styles to install and upgrade scripts.
 
