--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,9 +1,14 @@
 $Header$
 
-UseBB 0.3.1 Changelog
+UseBB 0.3.2 Changelog
 ------------------------------
 
 - Fixed bug #73: CSS doesn't load directly in IE when gzip enabled.
+- Improvements and corrections to translations.
+
+UseBB 0.3.1 Changelog
+------------------------------
+
 - Fixed bug #316: wrong charset in XHTML meta tag.
 - Fixed bug that kicks you back to install/upgrade after logging in.
 - Fixed bug that didn't update the statistics well while installing.
