--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,7 +4,7 @@ UseBB 0.4 Changelog
 ------------------------------
 
 - Possible fix for bug #331 (cyrillic languages+entities).
-- Many template improvements.
+- Various template improvements and translation corrections.
 
 UseBB 0.3.2 Changelog
 ------------------------------
