--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ UseBB 0.4 Changelog
 - Added feature #301: Search engine friendly URL's.
 - Fixed bug #336: Problems on SF.net.
 - Possible fix for bug #331 (cyrillic languages+entities).
+- Fixed a bug where everything is marked unread as a result of session data lost.
 - Various template improvements and translation corrections.
 - Added more security with additional code.
 - Better general error message without information disclosure.
