--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ UseBB 0.4 Changelog
 - Added feature #337: Allow all kinds of user names.
 - Added feature #338: Allow users to delete their own posts.
 - Added feature #301: Search engine friendly URL's.
+- Added changable password min length.
 - Fixed bug #336: Problems on SF.net.
 - Possible fix for bug #331 (cyrillic languages+entities).
 - Fixed a bug where everything is marked unread as a result of session data lost.
