--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,8 +7,9 @@ UseBB 0.4 Changelog
 - Added feature #338: Allow users to delete their own posts.
 - Added feature #301: Search engine friendly URL's.
 - Added changable password min length.
+- Added block when lower leveled tries to edit posts of higher leveled.
 - Fixed bug #336: Problems on SF.net.
-- Possible fix for bug #331 (cyrillic languages+entities).
+- Fixed bug #331: cyrillic languages+entities.
 - Fixed a bug where everything is marked unread as a result of session data lost.
 - Fixed various bbcode parser bugs.
 - Various template improvements and translation corrections.
