better template parser - nicer debug info

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,8 @@ UseBB 0.4 Changelog
 - Added feature #301: Search engine friendly URL's.
 - Added changable password min length.
 - Added block when lower leveled tries to edit posts of higher leveled.
+- Better template parser.
+- Nicer debug info.
 - Fixed bug #336: Problems on SF.net.
 - Fixed bug #331: cyrillic languages+entities.
 - Fixed a bug where everything is marked unread as a result of session data lost.
