--- a/INSTALL
+++ b/INSTALL
@@ -7,13 +7,13 @@ Before installing UseBB, make sure your host accords to the minimal system requi
 * Minimal: HTTP-server supporting PHP, PHP 4.1.0, MySQL 3.23
 * Recommended: GNU/Linux, most recent versions of Apache, PHP and MySQL
 
-You might want to use install.php to quickly set up your board. Otherwise, you can
-follow these directions:
+You might want to use install/install.php to quickly set up your board. Otherwise, you
+can follow these directions:
 
-1. Execute usebb.sql on your database. Currently, UseBB needs 9 tables.
+1. Execute install/usebb.sql on your database. Currently, UseBB needs 10 tables.
 3. Edit config.php to your preferences.
 4. Upload all the files to your host.
-5. Delete install.php and upgrade-*.php for security reasons.
+5. Delete the directory install/ for security reasons.
 6. Register a first user. It will automatically be an administrator.
 7. Test UseBB.
 
